network_policy_error/manifests/nginx/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx
  namespace: nginx
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nginx
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nginx
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
